--- a/index.html
+++ b/index.html
@@ -11,26 +11,33 @@
 <body>
 <div class="container">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"><i>OS-CARS</i></a>
+      <div class="container-fluid">
+          <nav class="navbar bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="logo1.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+          os-cars
+        </a>
+      </div>
+    </nav>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="https://www.bing.com/ck/a?!&&p=bb3a1c57c077d93d97ca51c96bc70df640cad58abe4b7d51e848de1cf793dac3JmltdHM9MTc1MzQ4ODAwMA&ptn=3&ver=2&hsh=4&fclid=2c2ac318-6eac-6443-0d85-d65d6f2965e0&psq=%d8%b5%d9%81%d8%ad%d8%a9+%d8%ae%d8%a7%d8%b5%d9%87+%d8%a8%d8%b3%d9%8a%d8%a7%d8%b1%d8%a7%d8%aa+%d8%a7%d9%84%d9%85%d8%b1%d8%b3%d9%8a%d8%af%d8%b3&u=a1aHR0cHM6Ly9hcmF3aGVlbHMuY29tL2Nhci1icmFuZC9tZXJjZWRlcy8&ntb=1"><i>Mercedes</i></a>
+          <a class="nav-link active" aria-current="page" href="https://www.bing.com/ck/a?!&&p=bb3a1c57c077d93d97ca51c96bc70df640cad58abe4b7d51e848de1cf793dac3JmltdHM9MTc1MzQ4ODAwMA&ptn=3&ver=2&hsh=4&fclid=2c2ac318-6eac-6443-0d85-d65d6f2965e0&psq=%d8%b5%d9%81%d8%ad%d8%a9+%d8%ae%d8%a7%d8%b5%d9%87+%d8%a8%d8%b3%d9%8a%d8%a7%d8%b1%d8%a7%d8%aa+%d8%a7%d9%84%d9%85%d8%b1%d8%b3%d9%8a%d8%af%d8%b3&u=a1aHR0cHM6Ly9hcmF3aGVlbHMuY29tL2Nhci1icmFuZC9tZXJjZWRlcy8&ntb=1">Mercedes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://www.bing.com/ck/a?!&&p=5aa084da1b428b9d604649eff22af0c73e1213b0154c7bd0f31bd65fb49945ddJmltdHM9MTc1MzQ4ODAwMA&ptn=3&ver=2&hsh=4&fclid=2c2ac318-6eac-6443-0d85-d65d6f2965e0&psq=%d8%b5%d9%81%d8%ad%d8%a9+%d8%ae%d8%a7%d8%b5%d9%87+%d8%a8%d8%b3%d9%8a%d8%a7%d8%b1%d8%a7%d8%aa+bmw&u=a1aHR0cHM6Ly93d3cuYm13LW1lLmNvbS9lbi9pbmRleC5odG1s&ntb=1"><i>BMW</i></a>
+          <a class="nav-link" href="https://www.bing.com/ck/a?!&&p=5aa084da1b428b9d604649eff22af0c73e1213b0154c7bd0f31bd65fb49945ddJmltdHM9MTc1MzQ4ODAwMA&ptn=3&ver=2&hsh=4&fclid=2c2ac318-6eac-6443-0d85-d65d6f2965e0&psq=%d8%b5%d9%81%d8%ad%d8%a9+%d8%ae%d8%a7%d8%b5%d9%87+%d8%a8%d8%b3%d9%8a%d8%a7%d8%b1%d8%a7%d8%aa+bmw&u=a1aHR0cHM6Ly93d3cuYm13LW1lLmNvbS9lbi9pbmRleC5odG1s&ntb=1">BMW</a>
         </li>
         <li class="nav-item" >
-          <a class="nav-link active" aria-current="page" href="https://www.bing.com/ck/a?!&&p=e9372ba99f19be662e69b18190accd608868976c4c3b2341d829f34c6b38b9fbJmltdHM9MTc1MzQ4ODAwMA&ptn=3&ver=2&hsh=4&fclid=2c2ac318-6eac-6443-0d85-d65d6f2965e0&psq=%d8%b5%d9%81%d8%ad%d9%87+%d8%ae%d8%a7%d8%b5%d9%87+%d8%a8%d8%b3%d9%8a%d8%a7%d8%b1%d8%a7%d8%aa+%d8%a3%d9%88%d8%af%d9%8a&u=a1aHR0cHM6Ly93d3cuYXVkaS1qb3JkYW4uY29tL2VuLw&ntb=1" ><i> Audi</i></a>
+          <a class="nav-link active" aria-current="page" href="https://www.bing.com/ck/a?!&&p=e9372ba99f19be662e69b18190accd608868976c4c3b2341d829f34c6b38b9fbJmltdHM9MTc1MzQ4ODAwMA&ptn=3&ver=2&hsh=4&fclid=2c2ac318-6eac-6443-0d85-d65d6f2965e0&psq=%d8%b5%d9%81%d8%ad%d9%87+%d8%ae%d8%a7%d8%b5%d9%87+%d8%a8%d8%b3%d9%8a%d8%a7%d8%b1%d8%a7%d8%aa+%d8%a3%d9%88%d8%af%d9%8a&u=a1aHR0cHM6Ly93d3cuYXVkaS1qb3JkYW4uY29tL2VuLw&ntb=1" > Audi</a>
         </li>
         <li class="nav-item" >
-          <a class="nav-link active" aria-current="page" href="https://www.bing.com/ck/a?!&&p=f5f7c4ef6e20170ac15ba2d65354a726df39b88c974428dceb2ff74c2bc72deeJmltdHM9MTc1MzQ4ODAwMA&ptn=3&ver=2&hsh=4&fclid=2c2ac318-6eac-6443-0d85-d65d6f2965e0&psq=%d8%b5%d9%81%d8%ad%d9%87+%d8%ae%d8%a7%d8%b5%d9%87+%d8%a8%d8%b3%d9%8a%d8%a7%d8%b1%d8%a7%d8%aa+%d8%b1%d9%8a%d9%86%d8%ac+%d8%b1%d9%88%d9%81%d8%b1&u=a1aHR0cHM6Ly93d3cubGFuZHJvdmVyLW9tYW4uY29tL2FyL3JhbmdlLXJvdmVyLzI1bXkvcmFuZ2Utcm92ZXIvbW9kZWxzLWFuZC1zcGVjaWZpY2F0aW9ucw&ntb=1" ><i>Range Rover</i></a>
+          <a class="nav-link active" aria-current="page" href="https://www.bing.com/ck/a?!&&p=f5f7c4ef6e20170ac15ba2d65354a726df39b88c974428dceb2ff74c2bc72deeJmltdHM9MTc1MzQ4ODAwMA&ptn=3&ver=2&hsh=4&fclid=2c2ac318-6eac-6443-0d85-d65d6f2965e0&psq=%d8%b5%d9%81%d8%ad%d9%87+%d8%ae%d8%a7%d8%b5%d9%87+%d8%a8%d8%b3%d9%8a%d8%a7%d8%b1%d8%a7%d8%aa+%d8%b1%d9%8a%d9%86%d8%ac+%d8%b1%d9%88%d9%81%d8%b1&u=a1aHR0cHM6Ly93d3cubGFuZHJvdmVyLW9tYW4uY29tL2FyL3JhbmdlLXJvdmVyLzI1bXkvcmFuZ2Utcm92ZXIvbW9kZWxzLWFuZC1zcGVjaWZpY2F0aW9ucw&ntb=1" >Range Rover</a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item11 dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
           </a>
@@ -51,6 +58,7 @@
       </form>
     </div>
   </div>
+        
     </nav>
     <hr>
 
@@ -162,7 +170,7 @@
   </div>
     </div>
     <div class="col">
-      <div class="card" style="width: 18rem; height: 36rem;">
+      <div class="card" style="width: 18rem; height:36rem ">
       <img src="img32.webp" class="card-img-top" alt="...">
       <div class="card-body">
     <h5 class="card-title">BMW_4_Series_2025</h5>
@@ -306,7 +314,7 @@
   <div class="container text-center mt-5">
   <div class="row">
     <div class="col">
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 18rem; ">
       <img src="img55.webp" class="card-img-top" alt="...">
       <div class="card-body">
     <h5 class="card-title">Land_Rover_Defender_2025</h5>
@@ -322,7 +330,7 @@
 </div>
     </div>
     <div class="col">
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 18rem; ">
       <img src="img52.jpg" class="card-img-top" alt="...">
       <div class="card-body">
     <h5 class="card-title">Land_Rover_Range_Rover_2025</h5>
@@ -339,7 +347,7 @@
 </div>
     </div>
     <div class="col">
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 18rem; ">
       <img src="img53.webp" class="card-img-top" alt="...">
       <div class="card-body">
     <h5 class="card-title">Land_Rover_Range_Rover_Sport_SVR_2022</h5>
