--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         
     </nav>
     <hr>
-
+    <div class="test" >
         <h2><i>Mercedes Section</i></h2>
  <div class="row  mt-5">
     
@@ -148,6 +148,7 @@
     </div>
 
   </div>
+  <div   style="height: 10px;"></div>
 </div>
 <hr>
 
@@ -205,7 +206,7 @@
 
     </div>
     <div class="col">
-      <div class="card" style="width: 18rem; height: 36rem;">
+      <div class="card" style="width: 18rem; height: auto;">
       <img src="img34.webp" class="card-img-top" alt="...">
       <div class="card-body">
     <h5 class="card-title">BMW_8_Series_Gran_Coupe_2025</h5>
@@ -394,6 +395,7 @@
 
 
   </div>
+</div>
 </div>
 
 
